Fix collections top margin for acrylic navbar overlay. A few tweaks to make Collections+ plugin content align properly.

--- a/css/library.css
+++ b/css/library.css
@@ -119,12 +119,6 @@
   opacity: 1 !important;
 }
 
-/* DOWNLOADS OLD */
-._1bq4x9pa4-9RLY-dXWUZTp {
-  overflow-y: hidden !important;
-  z-index: unset !important;
-}
-
 /* DOWNLOADS NEW */
 ._3Mbhnlk1Go2j8yCdjthzc7.IbePLaw-vSvhG1GTenYFg._2KB3yVOsiRCK9qK6mwKl9c {
   background-color: var(--zehn-color-window-acrylic) !important;
@@ -1578,14 +1572,14 @@ body:not(.WindowFocus) ._32TmRVFkc8HMIUZ-KnnKby._3E5iVG630BkOHTaJJaMEMw::after {
 }
 
 ._3pSPluBgf0NeR1kkCLWMhR.eNLOx4LVceeMwRvTVWh3::after {
-  content: "" !important;
-  bottom: 4px !important;
-  left: 4px !important;
-  right: 4px !important;
-  height: 2px !important;
-  background-color: rgb(var(--zehn-color-accent)) !important;
-  display: block !important;
-  position: absolute !important;
+  content: "";
+  bottom: 4px;
+  left: 4px;
+  right: 4px;
+  height: 2px;
+  background-color: rgb(var(--zehn-color-accent));
+  display: block;
+  position: absolute;
 }
 
 ._3pSPluBgf0NeR1kkCLWMhR.eNLOx4LVceeMwRvTVWh3, ._3pSPluBgf0NeR1kkCLWMhR {
@@ -3208,15 +3202,6 @@ body:not(.WindowFocus) ._32TmRVFkc8HMIUZ-KnnKby._3E5iVG630BkOHTaJJaMEMw::after {
   margin-top: var(--zehn-size-navbar-height) !important;
 }
 
-/* APP DETAILS PADDING FOR ACYRLIC */
-.u1xD3KJEgksF_J_5TLZzO {
-  padding: 32px 0 0 0 !important;
-}
-
-._2q70uOe6xM3-c5XIVfBLe6 {
-  padding: 32px 0 0 0 !important;
-}
-
 /* ALL COLLECTIONS NAV TIMER */
 ._3IWn-2rn7x98o5fDd0rAxb ._2Tnpameo_7u1gooRtVpheV svg {
   top: unset !important;
@@ -3658,6 +3643,10 @@ body:not(.WindowFocus) ._32TmRVFkc8HMIUZ-KnnKby._3E5iVG630BkOHTaJJaMEMw::after {
   border-color: var(--zehn-color-dropdown-fancy-border-hover) !important;
 }
 
+._1tBzypb5E2AwNuBuVns9Hl {
+  font-size: var(--zehn-size-14) !important;
+}
+
 ._1tBzypb5E2AwNuBuVns9Hl .DialogDropDown._DialogInputContainer:not(.DialogToggleField) {
   white-space: nowrap !important;
   overflow: hidden !important;
@@ -3666,9 +3655,9 @@ body:not(.WindowFocus) ._32TmRVFkc8HMIUZ-KnnKby._3E5iVG630BkOHTaJJaMEMw::after {
   gap: 0 !important;
   position: relative !important;
   min-width: 0 !important;
-  line-height: 48px !important;
-  height: 48px !important;
-  min-height: 48px !important;
+  line-height: var(--zehn-size-input-large) !important;
+  height: var(--zehn-size-input-large) !important;
+  min-height: var(--zehn-size-input-large) !important;
   padding: 0 !important;
   justify-content: space-between !important;
   background: var(--zehn-color-sorting-background) !important;
@@ -4971,6 +4960,7 @@ div:has(>._1J21tLst5SEhBPkVRT53UV) {
   display: flex !important;
   flex-direction: column !important;
   gap: 0 !important;
+  padding: 0 !important;
 }
 
 ._2q70uOe6xM3-c5XIVfBLe6 ._2rqTSCLSSEycEiuCS_OkpX {
@@ -5007,14 +4997,21 @@ div:has(>._1J21tLst5SEhBPkVRT53UV) {
 }
 
 .BpxCzVzPf5Y8EFlz5bZrP ._1tBzypb5E2AwNuBuVns9Hl .DialogDropDown._DialogInputContainer {
-  padding: 0 var(--zehn-size-padding-medium) !important;
-  height: 48px !important;
-  min-height: 48px !important;
-  margin: 0 16px !important;
+  padding: 0 !important;
+  height: var(--zehn-size-input-large) !important;
+  min-height: var(--zehn-size-input-large) !important;
+  margin: 0 0 0 var(--zehn-size-gap-small) !important;
 }
 
 .BpxCzVzPf5Y8EFlz5bZrP {
-  padding: 0 0 16px 0 !important;
+  padding: 0 !important;
+  margin-bottom: var(--zehn-size-gap-medium) !important;
+  gap: var(--zehn-size-gap-medium) !important;
+}
+
+.BpxCzVzPf5Y8EFlz5bZrP > div {
+  place-self: center !important;
+  margin: auto 0 !important;
 }
 
 .rz1mrOnj9WN6UErES7qsq {
@@ -5027,7 +5024,19 @@ div:has(>._1J21tLst5SEhBPkVRT53UV) {
 
 /* APPVIEW EDIT BUTTON */
 ._2q70uOe6xM3-c5XIVfBLe6 ._12pDikfkuNH_o3MHKU1skz {
+  position: relative !important;
   margin-top: 0 !important;
+}
+
+._2q70uOe6xM3-c5XIVfBLe6 ._12pDikfkuNH_o3MHKU1skz._1t_GA8AUflPZnjl2YQVzBF::after {
+  content: "";
+  bottom: 4px;
+  left: 4px;
+  right: 4px;
+  height: 2px;
+  background-color: rgb(var(--zehn-color-accent));
+  display: block;
+  position: absolute;
 }
 
 ._2q70uOe6xM3-c5XIVfBLe6 ._12pDikfkuNH_o3MHKU1skz svg {
@@ -5171,6 +5180,11 @@ div:has(>._1J21tLst5SEhBPkVRT53UV) {
   margin: 0 !important;
 }
 
+._2q70uOe6xM3-c5XIVfBLe6 ._2rqTSCLSSEycEiuCS_OkpX .DialogInput_Wrapper .DialogTextInputBase {
+  transition: none !important;
+  max-height: var(--zehn-size-input-medium) !important;
+}
+
 /* DYNAMIC COLLECTION SNAPSHOT BUTTON */
 ._3vDj4xewvplaiGsjeunxyx {
   padding: 0 !important;
@@ -5255,10 +5269,21 @@ div:has(>._1J21tLst5SEhBPkVRT53UV) {
   margin: 0 !important;
 }
 
+/* ACRYLIC - ALL COLLECTIONS */
+.u1xD3KJEgksF_J_5TLZzO > div:first-of-type {
+  margin-top: calc(var(--zehn-size-navbar-height) + var(--zehn-menu-height)) !important;
+}
+
+/* ACRYLIC - COLLECTION */
+._2q70uOe6xM3-c5XIVfBLe6 > div:first-of-type {
+  margin-top: calc(var(--zehn-size-navbar-height) + var(--zehn-menu-height)) !important;
+}
+
 /* ALL COLLECTIONS */
 .u1xD3KJEgksF_J_5TLZzO {
   background: var(--zehn-color-window-fancy) !important;
   border: unset !important;
+  padding: 0 !important;
 }
 
 .u1xD3KJEgksF_J_5TLZzO .Ma65KR7z4XhZl4vJvxf4D {
